fix: change to text align

--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -118,7 +118,7 @@ h6 {
 }
 
 .card-testimonial {
-    align: center;
+    text-align: center;
 }
 
 .card-testimonial .card-avatar {
